Fixed spacing.

--- a/csmconnect/scheduler/static/scheduler/styles/homepage_header.css
+++ b/csmconnect/scheduler/static/scheduler/styles/homepage_header.css
@@ -10,6 +10,12 @@ body {
   color: black;
 }
 
+.title-container, .links-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 a {
   text-decoration: none;
   color: black;
